@@ -47,8 +47,8 @@ def pickLatestBuild(builder, requests):
 
 
 def loadBuilderConfig(c, is_test_mode_enabled=False, master_prefix_path='./'):
-    # FIXME: These file handles are leaked.
-    config = json.load(open(os.path.join(master_prefix_path, 'config.json')))
+    with open(os.path.join(master_prefix_path, 'config.json')) as config_json:
+        config = json.load(config_json)
     if is_test_mode_enabled:
         passwords = {}
     else:
