@@ -42,7 +42,8 @@ STEP_NAME_LENGTH_LIMIT = 50
 
 
 def loadBuilderConfig(c, is_test_mode_enabled=False, master_prefix_path='./'):
-    config = json.load(open(os.path.join(master_prefix_path, 'config.json')))
+    with open(os.path.join(master_prefix_path, 'config.json')) as config_json:
+        config = json.load(config_json)
     if is_test_mode_enabled:
         passwords = {}
     else:
