@@ -1,3 +1,15 @@
+2021-08-07  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] Ensure file handle is not leaked in loadConfig.py
+        https://bugs.webkit.org/show_bug.cgi?id=228866
+
+        Reviewed by Alexey Proskuryakov.
+
+        * CISupport/build-webkit-org/loadConfig.py:
+        (loadBuilderConfig):
+        * CISupport/ews-build/loadConfig.py:
+        (loadBuilderConfig):
+
 2021-08-06  Jonathan Bedard  <jbedard@apple.com>
 
         [git-webkit] Add setup function
